--- a/styles/components.css
+++ b/styles/components.css
@@ -179,6 +179,12 @@
     font-weight: 700;
     font-size: 16px;
     color: var(--text-primary);
+    margin-bottom: 5px;
+}
+
+.repo-date {
+    font-size: 13px;
+    color: var(--text-secondary);
 }
 
 .repo-stars {
